[package]
name = "ott-lsp"
authors = ["Sergio Benitez <sb@sergio.bz>"]
version = "0.1.1"
edition = "2024"

[dependencies]
lazy_static = "1.5.0"
lsp-server = "0.7.0"
lsp-types = "0.97.0"
regex = "1.11.1"
serde_json = "1.0"
serde = { version = "1.0.217", features = ["derive"] }
parking_lot = "0.12.3"
